Fixed overflow on login screen

--- a/backend/App/client/src/pages/Authentication/Auth.css
+++ b/backend/App/client/src/pages/Authentication/Auth.css
@@ -100,6 +100,7 @@
 }
 
 .auth__container .auth-bottom-wave {
+    overflow: hidden;
     position: absolute;
     bottom: 0;
     left: 0;
